--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^1.5.3
   dartz: ^0.10.1
+  dotted_line: ^3.2.2
 
 dev_dependencies:
   flutter_test:
